--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Amine Rabhi"
   avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Science Portfolio"
+  bio              : "I am 3rd year student at Ecole Polytechnique, France’s leading school of science and engineering. I major in Applied Mathematics, focusing on statistics, optimization, data science (Ml and DL) as well as financial engineering."
   location         : "Paris, France"
   email            : "mohamed.rabhi@polytechnique.edu"
   uri              :
