--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Amine Rabhi"
-  avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/profile2.png.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Professional Website"
   location         : "Paris, France"
   email            : "mohamed.rabhi@polytechnique.edu"
