--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Projects"
     url: /projects/
   - title: "CV"
-    url: https://github.com/AmineRabhi/AmineRabhi.github.io/raw/master/CV_RABHI.pdf
+    url: https://github.com/AmineRabhi/AmineRabhi.github.io/raw/master/CV_website.pdf
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
