--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Reda Belhaj-Soullami"
-  avatar           : "#/images/profile_ok.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/profile_ok.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : #"Professional Website"
   location         : "Paris, France"
   email            : "reda.belhaj-soullami@polytechnique.edu"
